add test for native-image